--- a/header.html
+++ b/header.html
@@ -5,10 +5,10 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg p-3 bg-warning shadow">
+		<nav class="navbar navbar-expand-lg p-3 shadow rounded">
 			<div class="container-fluid">
-				<a class="navbar-brand fs-1 fw-bold lavishly-yours-regular" href="index.html">
-					<img src="img/logo.png" width="60" height="100%" class="d-inline-block" alt="Logo">
+				<a class="navbar-brand fs-1 fw-bold" href="index.html">
+					<img src="img/logo.png" class="d-inline-block" alt="Logo">
 					Kit Cochrane
 				</a>
 
