--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 			crossorigin="anonymous">
 			</script>
-
-		<!--JS for loading Header/Footer-->
-		<script>
-			$(function () {
-				$("#header").load("header.html");
-				$("#footer").load("footer.html");
-			});
-		</script>
 	</head>
 	
 	<body>
@@ -34,6 +26,8 @@
 		</main>
 
 		<footer id="footer"></footer>
+
+		<script type="module" src="main.js"></script>
 
 		<!--Bootstrap JS-->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
