--- a/header.html
+++ b/header.html
@@ -5,33 +5,48 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg p-3 shadow rounded">
+		<nav class="navbar navbar-expand-lg p-3 bg-primary-subtle shadow rounded">
 			<div class="container-fluid">
-				<a class="navbar-brand fs-1 fw-bold" href="index.html">
-					<img src="img/logo.png" class="d-inline-block" alt="Logo">
-					Kit Cochrane
-				</a>
+				<a class="navbar-brand bi bi-floppy2-fill logo"></a>
+
+				<a class="navbar-brand fs-1 fw-bold bytesized-regular" href="index.html">Kit Cochrane</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
 				<div class="collapse navbar-collapse justify-content-end" id="headerNav">
-					<ul class="navbar-nav fs-5">
+					<ul class="navbar-nav jersey-10-regular fs-3">
 						<li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								Projects
-							</a>
-							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="inbetween.html">The Inbetween Years</a></li>
-							</ul>
+
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">About Me</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Projects</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Other Things</a>
+						</li>
+
+						<li class="nav-item">
+							<button class="btn nav-link" id="btnLightsHeader" type="button" aria-expanded="false" aria-label="Toggle theme">
+								<i class="bi bi-moon-stars-fill" fill="currentColor"></i>
+							</button>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+
+		<!--Custom JS-->
+		<script type="module" defer>
+			import { switchLights } from './javasc/darkToggle.js'
+			document.getElementById('btnLightsHeader').addEventListener('click', (e) => { switchLights() })
+		</script>
 	</body>
 </html>
