Added Favicon for Tabs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
 		<title>devkit</title>
 
+		<link rel="icon" href="favicon.svg" sizes="32x32">
+
 		<!--Bootstrap-->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
