--- a/index.html
+++ b/index.html
@@ -28,7 +28,38 @@
 		<header id="header" class="sticky-top"></header>
 
 		<main>
-			<p>This is test</p>
+			<div class="container">
+				<div class="row m-4 g-4">
+					<div class="col-12 col-md-7 order-1">
+						<div class="crt" style="width: 100%; height: 100%;">
+							<div class="imageContainer fs-1" id="headline"></div>
+						</div>
+					</div>
+
+					<div class="col-md-1 order-2"></div>
+
+					<div class="p-3 col-12 col-md-4 order-3 bg-info-subtle round">
+							<h2>Hello There, I'm Kit!</h2>
+
+							<p>
+								By the fact that you're here I must think that you're looking for me!
+							</p>
+
+							<p>
+								Currently, I'm working towards a BSC Computer Science degree at the Univerity of Dundee.
+								Through this I'm working on a few projects here and there, showcased on this very site. Yes it's a portfolio!
+							</p>
+
+							<p>
+								I'm still working out exactly what area I want to focus on, but I do have particular interest in Software Engineering & Networking.
+							</p>
+
+							<p>
+								Please do take a look around at some of my projects! I try to keep as up to date as possible but please reach out for any more information!
+							</p>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<footer id="footer"></footer>
