Rethemed Site with Bootstrap Theme

--- a/footer.html
+++ b/footer.html
@@ -38,7 +38,7 @@
 						</li>
 					
 						<li class="nav-item">
-							<button class="btn nav-link" id="btnLightsFooter" type="button" aria-expanded="false" aria-label="Toggle theme">
+							<button class="btn btn-secondary" id="btnLightsFooter" type="button" aria-expanded="false" aria-label="Toggle theme">
 								<i class="bi bi-moon-stars-fill" fill="currentColor"></i>
 							</button>
 						</li>
