--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg p-3 bg-primary-subtle shadow rounded">
+		<nav class="navbar navbar-expand-lg p-3 bg-primary shadow rounded">
 			<div class="container-fluid">
 				<a class="navbar-brand bi bi-floppy2-fill logo"></a>
 
@@ -34,7 +34,7 @@
 						</li>
 
 						<li class="nav-item">
-							<button class="btn nav-link" id="btnLightsHeader" type="button" aria-expanded="false" aria-label="Toggle theme">
+							<button class="btn btn-light" id="btnLightsHeader" type="button" aria-expanded="false" aria-label="Toggle theme">
 								<i class="bi bi-moon-stars-fill" fill="currentColor"></i>
 							</button>
 						</li>
