--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		<!--Bootstrap-->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-			integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+		<link href="bootstrap.min.css" rel="stylesheet">
 
 		<!--Bootstrap Icons-->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -24,21 +23,20 @@
 	</head>
 	
 	<body>
-		<!--load Header-->
+		<!--Header Insert-->
 		<header id="header" class="sticky-top"></header>
 
 		<main>
-			<div class="container">
-				<div class="row m-4 g-4">
-					<div class="col-12 col-md-7 order-1">
+			<div class="container p-2">
+				<div class="row my-4 justify-content-around">
+					<div class="col-12 col-md-8 order-1">
 						<div class="crt" style="width: 100%; height: 100%;">
 							<div class="imageContainer fs-1" id="headline"></div>
 						</div>
 					</div>
 
-					<div class="col-md-1 order-2"></div>
-
-					<div class="p-3 col-12 col-md-4 order-3 bg-info-subtle round">
+					<div class="col-12 col-md-4 order-2">
+						<div class="p-3 bg-info text-justify border round">
 							<h2>Hello There, I'm Kit!</h2>
 
 							<p>
@@ -62,8 +60,10 @@
 			</div>
 		</main>
 
+		<!--Footer Insert-->
 		<footer id="footer"></footer>
 
+		<!--Custom JS-->
 		<script type="module" src="main.js"></script>
 
 		<!--Bootstrap JS-->
