Changed Container type for sections

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 				</div>
 			</div>
 
-			<div class="container-fluid py-4">
+			<div class="container-fluid py-4" id="about">
 				<div class="row p-3 text-center align-items-center bg-success border">
-					<h1 id="about">So A Little Bit About Me!</h1>
+					<h1>So A Little Bit About Me!</h1>
 				</div>
 			</div>
 
-			<div class="container-fluid p-4">
+			<div class="container p-4">
 				<div class="row g-4 align-items-center">
 					<div class="col-12 col-md-4 border round">
 						<img src="img/me.png" alt="A picture Of Me">
