--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg p-3 bg-primary shadow rounded">
+		<nav class="navbar navbar-expand-lg p-3 bg-primary shadow round">
 			<div class="container-fluid">
 				<a class="navbar-brand bi bi-floppy2-fill logo"></a>
 
