--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<main>
 			<div class="container p-2">
 				<div class="row my-4 justify-content-around">
-					<div class="col-12 col-md-8 order-1">
+					<div class="col-12 col-md-8 order-1 mb-4 mb-md-0">
 						<div class="crt" style="width: 100%; height: 100%;">
 							<div class="imageContainer fs-1" id="headline"></div>
 						</div>
