Added Proper Page Anchoring

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 				</div>
 			</div>
 
-			<div class="container-fluid py-4" id="about">
-				<div class="row p-3 text-center align-items-center bg-success border">
+			<div id="about" class="anchor"></div>
+			<div class="container-fluid py-4">
+				<div class="row p-3 text-center align-items-center bg-success border-top border-bottom">
 					<h1>So A Little Bit About Me!</h1>
 				</div>
 			</div>
