--- a/footer.html
+++ b/footer.html
@@ -22,11 +22,11 @@
 				<div class="collapse navbar-collapse justify-content-end" id="headerNav">
 					<ul class="navbar-nav jersey-10-regular fs-3 justify-content-end">
 						<li class="nav-item">
-							<a class="nav-link active text-dark" aria-current="page" href="index.html">Home</a>
+							<a class="nav-link active text-dark" aria-current="page" href="#">Home</a>
 						</li>
 					
 						<li class="nav-item">
-							<a class="nav-link active text-dark" aria-current="page" href="#">About Me</a>
+							<a class="nav-link active text-dark" aria-current="page" href="#about">About Me</a>
 						</li>
 					
 						<li class="nav-item">
