--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand bi bi-floppy2-fill logo"></a>
 
-				<a class="navbar-brand fs-1 fw-bold bytesized-regular" href="index.html">Kit Cochrane</a>
+				<a class="navbar-brand fs-1 fw-bold bytesized-regular" href="#">Kit Cochrane</a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -18,11 +18,11 @@
 				<div class="collapse navbar-collapse justify-content-end" id="headerNav">
 					<ul class="navbar-nav jersey-10-regular fs-3">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">About Me</a>
+							<a class="nav-link active" aria-current="page" href="#about">About Me</a>
 						</li>
 
 						<li class="nav-item">
