--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@
 						</li>
 					
 						<li class="nav-item">
-							<a class="nav-link active text-dark" aria-current="page" href="#">Projects</a>
+							<a class="nav-link active text-dark" aria-current="page" href="#projects">Projects</a>
 						</li>
 					
 						<li class="nav-item">
