--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Projects</a>
+							<a class="nav-link active" aria-current="page" href="#projects">Projects</a>
 						</li>
 
 						<li class="nav-item">
