--- a/index.html
+++ b/index.html
@@ -135,6 +135,117 @@
 					</div>
 				</div>
 			</div>
+
+			<div id="projects" class="anchor"></div>
+			<div class="container-fluid py-4">
+				<div class="row p-3 text-center align-items-center bg-info border-top border-bottom">
+					<h1>My Projects!</h1>
+				</div>
+			</div>
+			
+			<div class="container p-4">
+				<!--Featured-->
+				<div class="row align-items-center justify-content-center">
+					<div class="col-12">
+						<div class="card mb-4 bg-dark-subtle fill border round overflow-hidden">
+							<div class="row align-items-center p-4 p-xxl-0">
+								<div class="col-12 col-md-6">
+									<img src="img/pebl.png" class="card-img" alt="Pebl Running on a PC">
+								</div>
+
+								<div class="col-12 col-md-6">
+									<div class="card-body">
+										<h2 class="card-title">Pebl</h2>
+										<p class="card-text">
+											The most expansive project I have worked on, Pebl. It is a basic social media client-server pairing similar to
+											twitter, but designed with expandibility in mind.
+											As a group collaboration we created version 1, since then I have revised the program code for
+											some minor updates with more being planned with the original team.
+											Through this project I was responsible for the JavaFX interface originally, although with that
+											completed for now I have been working on revising all of the server connection code in the
+											client and bugfixes.
+										</p>
+										<a href="https://github.com/dev-kit77/pebl-client" class="btn fs-4 btn-primary">Visit Repository</a>
+									</div>
+								</div>
+							</div>
+							
+						</div>
+					</div>
+				</div>
+
+				<div class="row align-items-center justify-content-center">
+					<!--Left-->
+					<div class="col-12 col-md-6">
+						<div class="card mb-4 bg-dark-subtle fill round overflow-hidden">
+							<img src="img/packetTracer.png" class="card-img" alt="GlorboCorp Home Page">
+							<div class="card-body">
+								<h2 class="card-title">ABnegation Company Network</h2>
+								<p class="card-text">
+									A project I suprisingly really enjoyed working on was this network simulation. The scenario for this project was a the
+									ABnegation Company was upgrading their network and I was tasked with building a test simulation before they committed to
+									the expense. This involved the creation of subnets and the use of some complex routing and masks to keep the nextworks
+									as small as possible while leaving space for expansion, including some complexities from routing DHCP packets between
+									subnets for the external building without escaping into the wider network and configuration of manual IP's and wireless
+									Access for other parts of the building. This is the project that has really got me interested in Network Engineering.
+								</p>
+								<a href="netSim.pkt" download="ABnegation Company Network.pkt" class="btn fs-4 btn-primary">Download Packet Tracer File</a>
+							</div>
+						</div>
+
+						<div class="card mb-4 bg-dark-subtle fill round overflow-hidden">
+							<img src="img/glorbocorp.png" class="card-img" alt="GlorboCorp Home Page">
+							<div class="card-body">
+								<h2 class="card-title">GlorboCorp</h2>
+								<p class="card-text">
+									This project is a simple, sytrical webpage for an imaginary company called GlorboCorp, selling a
+									variety of items such as Glorbs & Flards.
+									Set in the distant future of 2055, it takes jabs at the mental state of the fictional developer
+									hired to create the site and it's content.
+									The real purpose of the site however was to take on learning Bootstrap, The site is entirely
+									built with Bootstrap and it's classes over use of css or inline style.
+								</p>
+								<a href="https://dev-kit77.github.io/GlorboCorp/" class="btn fs-4 btn-primary">Visit Site</a>
+							</div>
+						</div>
+					</div>
+			
+					<!--Right-->
+					<div class="col-12 col-md-6">
+						<div class="card mb-4 bg-dark-subtle fill round overflow-hidden">
+							<img src="img/scribble.png" class="card-img" alt="Scribble In the terminal"
+								style="overflow: hidden;">
+							<div class="card-body">
+								<h2 class="card-title">Scribble</h2>
+								<p class="card-text">
+									Scribble started as a Java console based recreation of Scrabble, Originally with a lesser ruleset but I eventually expanded this further to the full ruleset, 
+									Including scoring for overlapping words and special board tiles. A big part of my personal additions to the game was well spent on the dynamic board sizing and other touches.
+									As much as at it's core it's simple sounding concept, it proved to be a challenge to implement and I enjoyed making it and enjoy the finished product. 
+									I learned a lot about making intuitive command line interfaces for progams from this project too. While not as accessible as a GUI, I tried to make it as polished and easy to use as possible.
+									The final result is I belive a very well polished recreation.
+								</p>
+								<a href="https://github.com/dev-kit77/Scribble" class="btn fs-4 btn-primary">Visit Repository</a>
+							</div>
+						</div>
+
+						<div class="card mb-4 bg-dark-subtle fill round overflow-hidden">
+							<img src="img/shebang.png" class="card-img" alt="Shebang in bash">
+							<div class="card-body">
+								<h2 class="card-title">Shebang</h2>
+								<p class="card-text">
+									The first project worked on with the Pebl Team, Shebang is a shell to-do list manager.
+									On this project I was initally responsible for the search and sort functions but ended up expanding to some
+									other methods,
+									along with also working on the parameter parcing for the initial script. This taught us all a lot about working
+									colaborativly through Github, along with general teamwork on a codebase preparing us for the larger undertaking that
+									Pebl became.
+								</p>
+								<a href="https://github.com/dev-kit77/Shebang" class="btn fs-4 btn-primary">Visit Repository</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<!--Footer Insert-->
