Reorganised Site layout

--- a/header.html
+++ b/header.html
@@ -18,7 +18,11 @@
 				<div class="collapse navbar-collapse justify-content-end" id="headerNav">
 					<ul class="navbar-nav jersey-10-regular fs-3">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#">Welcome</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#projects">My Projects</a>
 						</li>
 
 						<li class="nav-item">
@@ -26,11 +30,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#projects">Projects</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Other Things</a>
+							<a class="nav-link active" aria-current="page" href="#contact">Contact Me</a>
 						</li>
 
 						<li class="nav-item">
