--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="bi bi-github text-dark" href="https://www.linkedin.com/in/dev-kit"></a>
+						<a class="bi bi-github text-dark" href="https://github.com/dev-kit77"></a>
 					</li>
 				</ul>
 
