Added Final Contact Section

--- a/index.html
+++ b/index.html
@@ -265,6 +265,48 @@
 					</div>
 				</div>
 			</div>
+
+			<div id="contact" class="anchor"></div>
+			<div class="container-fluid py-4">
+				<div class="row p-3 text-center align-items-center bg-info border-top border-bottom">
+					<h1>Contact Me!</h1>
+				</div>
+			</div>
+			
+			<div class="container p-4">
+				<div class="row my-4 justify-content-around">
+					<div class="col-12 col-md-5 order-1 p-4 mb-md-0 round border bg-success">
+						<h2>Thank You!</h2>
+			
+						<p>
+							You made it to the end of the site! Thank you for taking a look at my projects and listening to my
+							story. I hope you found something useful from all of the information!
+						</p>
+			
+						<p>
+							If you need any more info or just want to contact me, you can do so with the form provided. I will try
+							and get back to you as soon as I can!
+						</p>
+
+						<p>
+							If you want to check me out on my professonal platforms please feel free to below:
+						</p>
+
+						<p>
+							<a class="bi bi-linkedin text-dark" href="https://www.linkedin.com/in/dev-kit"></a>
+							<a class="bi bi-github text-dark" href="https://github.com/dev-kit77"></a>
+						</p>
+
+						<h3>Kit.</h3>
+					</div>
+			
+					<div class="col-12 col-md-7 order-2 px-5 py-3">
+						<script
+							src="https://spamfreeform.com/sff/sff_info.php?id=1761174384592/dev-kit77.github.io/portfolio/index.html/contact"
+							type="text/javascript"></script>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<!--Footer Insert-->
