Adjusted Form Link

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 			
 					<div class="col-12 col-md-7 order-2 px-5 py-3">
 						<script
-							src="https://spamfreeform.com/sff/sff_info.php?id=1761174384592/dev-kit77.github.io/portfolio/index.html/contact"
+							src="https://spamfreeform.com/sff/sff_info.php?id=1761174384592/dev-kit77.github.io/portfolio/contact"
 							type="text/javascript"></script>
 					</div>
 				</div>
