--- a/footer.html
+++ b/footer.html
@@ -34,7 +34,7 @@
 						</li>
 					
 						<li class="nav-item">
-							<a class="nav-link active text-dark" aria-current="page" href="#contact">Contact Me</a>
+							<a class="nav-link active text-dark" aria-current="page" href="#contact">More Info</a>
 						</li>
 					
 						<li class="nav-item">
