--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#contact">Contact Me</a>
+							<a class="nav-link active" aria-current="page" href="#contact">More Info</a>
 						</li>
 
 						<li class="nav-item">
