Added Formal pic

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 						</div>
 					</div>
 
-					<div class="col-12 col-md-4 border round order-1">
-						<img src="img/me.png" alt="A picture Of Me">
+					<div class="col-12 col-md-4 p-0 border round order-1 overflow-hidden">
+						<img src="img/me.png" alt="A picture Of Me" style="max-width: 100%; max-height: 100%; object-fit: fill;">
 					</div>
 
 					<div class="col-12 col-md-4 order-3">
